section video done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,146 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="./pages/nosotros.html">nosotros</a></h1>
+    <main>
+        <section class="main__section">
+            <video width="100%" height="500px" class="section__video" autoplay muted poster loop >
+                <source src="./assets/production_ID_3769033.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <article class="section__text">
+                <div>
+                    <h1>Deliciosos filetes</h1>
+                    <br>
+                    <h4>4.4/5</h4>
+                    <p>De <strong>más de 1,206 </strong>reseñas de clientes</p>
+                </div>
+                <div>
+                    <img class="carrousel" src="./assets/images/carrousel/gif.gif" alt="">
+                </div>
+            </article>
+            <article class="overlaid">
+            </article>
+        </section>
+        <section class="main__section">
+            <h2 class="section__h2">Menú Especiales</h2>
+            <article class="section__container">
+                <div class="section__card">
+                    <div class="card__img">
+                        <img src="" alt="">
+                        <span>Desayuno</span>
+                    </div>
+                    <div class="card__title">
+                        <h4 class="card__h4">Mañana fresca</h4>
+                        <span class="card__span"><small>$</small>12.50</span>
+                        <div class="card__subtitle">
+                            <h6>4.3/5</h6>
+                            <span>(estrellas)</span>
+                            <p>102 reseñas</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="section__card">
+                    <div class="card__img">
+                        <img src="" alt="">
+                        <span>Desayuno</span>
+                    </div>
+                    <div class="card__title">
+                        <h4 class="card__h4">Mañana fresca</h4>
+                        <span class="card__span"><small>$</small>12.50</span>
+                        <div class="card__subtitle">
+                            <h6>4.3/5</h6>
+                            <span>(estrellas)</span>
+                            <p>102 reseñas</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="section__card">
+                    <div class="card__img">
+                        <img src="" alt="">
+                        <span>Desayuno</span>
+                    </div>
+                    <div class="card__title">
+                        <h4 class="card__h4">Mañana fresca</h4>
+                        <span class="card__span"><small>$</small>12.50</span>
+                        <div class="card__subtitle">
+                            <h6>4.3/5</h6>
+                            <span>(estrellas)</span>
+                            <p>102 reseñas</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="section__card">
+                    <div class="card__img">
+                        <img src="" alt="">
+                        <span>Desayuno</span>
+                    </div>
+                    <div class="card__title">
+                        <h4 class="card__h4">Mañana fresca</h4>
+                        <span class="card__span"><small>$</small>12.50</span>
+                        <div class="card__subtitle">
+                            <h6>4.3/5</h6>
+                            <span>(estrellas)</span>
+                            <p>102 reseñas</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="section__card">
+                    <div class="card__img">
+                        <img src="" alt="">
+                        <span>Desayuno</span>
+                    </div>
+                    <div class="card__title">
+                        <h4 class="card__h4">Mañana fresca</h4>
+                        <span class="card__span"><small>$</small>12.50</span>
+                        <div class="card__subtitle">
+                            <h6>4.3/5</h6>
+                            <span>(estrellas)</span>
+                            <p>102 reseñas</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="section__card">
+                    <div class="card__img">
+                        <img src="" alt="">
+                        <span>Desayuno</span>
+                    </div>
+                    <div class="card__title">
+                        <h4 class="card__h4">Mañana fresca</h4>
+                        <span class="card__span"><small>$</small>12.50</span>
+                        <div class="card__subtitle">
+                            <h6>4.3/5</h6>
+                            <span>(estrellas)</span>
+                            <p>102 reseñas</p>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section>
+            <img src="" alt="">
+            <!-- <article>
+            </article> -->
+        </section>
+        <section class="main__section">
+            <h2>Noticias y eventos</h2>
+            <article class="section__container">
+                <div>
+                    <div>
+
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+                <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </article>
+        </section>
+    </main>
+
     
     <!-- Script -->
     <script src="./js/main.js"></script>
