--- a/index.html
+++ b/index.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/home.css">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" 
+    rel="stylesheet" />
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+
+    <!-- AGREGAR FAVICOM Y LINK DE ICONS -->
+
+    <title>Flippo</title>
 </head>
 <body>
+    <header>
+        <nav class="nav">
+            <a href="../index.html" class="nav__link">
+                <img class="nav__link-favicon" src="./assets/favicon.png" alt="">
+                <img src="../assets/logo.png" alt="logo del negocio">
+            </a>
+            <div class="nav__menu" id="nav__menu">
+                <ul class="ul ">
+                    <li class="ul__item">
+                        <a href="../index.html">Home</a>
+                    </li>
+                    <li class="ul__item">
+                        <a href="">Nosotros</a>
+                    </li>
+                    <li class="ul__item">
+                        <a href="">Menu</a>
+                    </li>
+                    <li class="ul__item">
+                        <a href="">Contacto</a>
+                    </li>
+                    <button class="nav__button nav__button_hide">Reservation</button>
+                </ul>
+            </div>
+            <button class="nav__button-menu"><i class="ri-menu-line"></i></button>
+            <button class="nav__button">Reservation</button>
+        </nav>
+    </header>
     <main>
         <section class="main__section">
             <video width="100%" height="550px" class="section__video" autoplay muted poster loop >
@@ -318,6 +352,7 @@
 
     
     <!-- Script -->
-    <script src="./js/main.js"></script>
+    <script src="../js/main.js"></script>
+
 </body>
 </html>
