--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" 
     rel="stylesheet" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/footer.css">
     <title>Flippo</title>
 </head>
 <body>
@@ -278,11 +278,43 @@
         </section>
     </main>
 
+    <footer class="footer">
+        <section class="footer__container">
+            <h3 class="footer__title">Filippo</h3>
+            <div class="footer__content">
+                <div class="footer__info">
+                    <h6>Ubicación</h6>
+                    <p class="footer__address">Av. 9 de Julio 2444 - Buenos Aires</p>
+                </div>
+                <div class="footer__info">
+                    <h6>Horario de apertura</h6>
+                    <p class="footer__schedule">Lunes a Viernes</p>
+                    <p class="footer__schedule">10:00 a.m. - 20:00 p.m</p>
+                    <p class="footer__phone">Teléfono: 11-3422-9866</p>
+                </div>
+                <div class="footer__info">
+                    <h6>Redes sociales</h6>
+                    <div class="footer__social">
+                        <div>
+                            <i class="ri ri-instagram-line"></i>
+                        </div>
+                        <div>
+                            <i class="ri ri-twitter-line"></i>
+                        </div>
+                        <div>
+                            <i class="ri ri-facebook-circle-line"></i>
+                        </div>
+                        <div>
+                            <i class="ri ri-youtube-line"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h6 class="footer__credit">Desarrollado por Grupo 3 - Codo a Codo - 2024</h6>
+        </section>
+    </footer>
     
-    <!-- Script -->
-
-    <!-- <script src="./js/main.js"></script> -->
-
+    <!-- SCRIPTS -->
     <script src="../js/main.js"></script>
 
 </body>
