--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -112,6 +112,43 @@
       </div>
     </section>
   </main>
+  
+  <footer class="footer">
+    <section class="footer__container">
+        <h3 class="footer__title">Filippo</h3>
+        <div class="footer__content">
+            <div class="footer__info">
+                <h6>Ubicación</h6>
+                <p class="footer__address">Av. 9 de Julio 2444 - Buenos Aires</p>
+            </div>
+            <div class="footer__info">
+                <h6>Horario de apertura</h6>
+                <p class="footer__schedule">Lunes a Viernes</p>
+                <p class="footer__schedule">10:00 a.m. - 20:00 p.m</p>
+                <p class="footer__phone">Teléfono: 11-3422-9866</p>
+            </div>
+            <div class="footer__info">
+                <h6>Redes sociales</h6>
+                <div class="footer__social">
+                    <div>
+                        <i class="ri ri-instagram-line"></i>
+                    </div>
+                    <div>
+                        <i class="ri ri-twitter-line"></i>
+                    </div>
+                    <div>
+                        <i class="ri ri-facebook-circle-line"></i>
+                    </div>
+                    <div>
+                        <i class="ri ri-youtube-line"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h6 class="footer__credit">Desarrollado por Grupo 3 - Codo a Codo - 2024</h6>
+    </section>
+</footer>
+
   <!-- Script -->
   <script src="../js/main.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
