fix footer clases

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -118,28 +118,28 @@
         <h3 class="footer__title">Filippo</h3>
         <div class="footer__content">
             <div class="footer__info">
-                <h6>Ubicación</h6>
-                <p class="footer__address">Av. 9 de Julio 2444 - Buenos Aires</p>
+                <h6 class="footer__subtitle">Ubicación</h6>
+                <p class="footer__text">Av. 9 de Julio 2444 - Buenos Aires</p>
             </div>
             <div class="footer__info">
-                <h6>Horario de apertura</h6>
-                <p class="footer__schedule">Lunes a Viernes</p>
-                <p class="footer__schedule">10:00 a.m. - 20:00 p.m</p>
-                <p class="footer__phone">Teléfono: 11-3422-9866</p>
+                <h6 class="footer__subtitle">Horario de apertura</h6>
+                <p class="footer__text">Lunes a Viernes</p>
+                <p class="footer__text">10:00 a.m. - 20:00 p.m</p>
+                <p class="footer__text">Teléfono: 11-3422-9866</p>
             </div>
             <div class="footer__info">
-                <h6>Redes sociales</h6>
+                <h6 class="footer__subtitle">Redes sociales</h6>
                 <div class="footer__social">
-                    <div>
+                    <div class="social__icon">
                         <i class="ri ri-instagram-line"></i>
                     </div>
-                    <div>
+                    <div class="social__icon">
                         <i class="ri ri-twitter-line"></i>
                     </div>
-                    <div>
+                    <div class="social__icon">
                         <i class="ri ri-facebook-circle-line"></i>
                     </div>
-                    <div>
+                    <div class="social__icon">
                         <i class="ri ri-youtube-line"></i>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
         </div>
         <h6 class="footer__credit">Desarrollado por Grupo 3 - Codo a Codo - 2024</h6>
     </section>
-</footer>
+  </footer>
 
   <!-- Script -->
   <script src="../js/main.js"></script>
