--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Flippo</title>
 </head>
 <body>
+    <!-- NAV START -->
     <header>
         <nav class="nav">
             <a href="../index.html" class="nav__link">
@@ -40,6 +41,9 @@
             <button class="nav__button">Reservation</button>
         </nav>
     </header>
+
+    <!-- MAIN START -->
+    <!-- HEAD AND VIDEO -->
     <main>
         <section class="main__section">
             <video width="100%" height="550px" class="section__video" autoplay muted poster loop >
@@ -68,6 +72,7 @@
             </article>
         </section>
 
+        <!-- MENU ESPECIALES -->
         <section class="main__section">
             <h2 class="section__h2">Menú Especiales</h2>
             <article class="section__container">
@@ -222,6 +227,7 @@
         <section class="main_img">
         </section>
 
+        <!-- NOTICIAS Y EVENTOS -->
         <section class="main__section">
             <h2 class="section__h2">Noticias y eventos</h2>
             <article class="section__container">
@@ -278,6 +284,7 @@
         </section>
     </main>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <section class="footer__container">
             <h3 class="footer__title">Filippo</h3>
