working on modal

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" 
     rel="stylesheet" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
-    <title>Flippo</title>
+    <title>Flippo - Resto & Bar gourmet</title>
+    <meta name="descripción" content="Filippo: Restaurante y bar en un lugar muy agradable que ofrece almuerzos y cenas variadas de calidad gourmet. Elaboramos nuestros platos con ingredientes frescos y sanos, incluyendo opciones vegetarianas y veganas.">
+    <meta name="keywords" content="Filippo, restaurante, bar, almuerzo, cena, gourmet, ingredientes frescos, comida saludable, comida vegetariana, comida vegana, Buenos Aires">
+    <meta property="og:title" content="Filippo - Restaurante y Bar" />
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://filippo.vercel.app/" />
+    <meta property="og:image" content="https://filippo.vercel.app/assets/images/filippo_restaurant.jpg"/>
+    <meta property="og:site_name" content="Filippo - Restaurante y Bar"/>
 </head>
 <body>
+    
     <!-- NAV START -->
     <header>
         <nav class="nav">
@@ -34,11 +42,11 @@
                     <li class="ul__item">
                         <a href="./pages/contacto.html">Contacto</a>
                     </li>
-                    <button class="nav__button nav__button_hide">Reservation</button>
+                    <button class="nav__button nav__button_hide">Reservar</button>
                 </ul>
             </div>
             <button class="nav__button-menu"><i class="ri-menu-line"></i></button>
-            <button class="nav__button">Reservation</button>
+            <button class="nav__button">Reservar</button>
         </nav>
     </header>
 
