--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,11 +37,11 @@
                 <li class="ul__item">
                     <a href="./contacto.html">Contacto</a>
                 </li>
-                <button class="nav__button nav__button_hide">Reservation</button>
+                <button class="nav__button nav__button_hide">Reservar</button>
             </ul>
         </div>
         <button class="nav__button-menu"><i class="ri-menu-line"></i></button>
-        <button class="nav__button">Reservation</button>
+        <button class="nav__button">Reservar</button>
     </nav>
   </header>
 
