--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a href="">Nosotros</a>
                     </li>
                     <li class="ul__item">
-                        <a href="">Menu</a>
+                        <a href="./pages/menu.html">Menu</a>
                     </li>
                     <li class="ul__item">
                         <a href="./pages/contacto.html">Contacto</a>
