--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,7 +32,7 @@
                     <a href="">Nosotros</a>
                 </li>
                 <li class="ul__item">
-                    <a href="">Menu</a>
+                    <a href="./menu.html">Menu</a>
                 </li>
                 <li class="ul__item">
                     <a href="./contacto.html">Contacto</a>
