several fixes and upgrades

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <div class="nav__menu" id="nav__menu">
                 <ul class="ul ">
                     <li class="ul__item">
-                        <a href="../index.html">Home</a>
+                        <a href="./index.html">Home</a>
                     </li>
                     <li class="ul__item">
-                        <a href="">Nosotros</a>
+                        <a href="./pages/story.html">Nosotros</a>
                     </li>
                     <li class="ul__item">
                         <a href="./pages/menu.html">Menu</a>
