add shadow to inputs

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,21 +69,21 @@
           <!-- FORM START -->
           <div class="contact__form">
             <form action="#" class="custom-form">
-              <div class="col-lg-6 col-12">
+              <div>
                 <label for="contact-name" class="form-label">Nombre Completo</label>
                 <input type="text" name="contact-name" id="contact-name" class="form-control" placeholder="Tu nombre" />
               </div>
-              <div class="col-lg-6 col-12">
+              <div>
                 <label for="contact-phone" class="form-label">Número de teléfono</label>
                 <input type="text" name="contact-phone" id="contact-phone" class="form-control"
                   placeholder="Tu teléfono" />
               </div>
-              <div class="col-12">
+              <div>
                 <label class="form-label" for="contact-email">Email</label>
                 <input type="email" name="contact-email" id="contact-email" placeholder="Tu email" class="form-control"
                   pattern="[^@]*@[^@]*" />
               </div>
-              <div class="col-12">
+              <div>
                 <label for="contact-message" class="form-label">Mensaje</label>
                 <textarea name="contact-message" id="contact-message" rows="5" class="form-control form-control-area"
                   placeholder="Tu mensaje"></textarea>
